--- a/style.css
+++ b/style.css
@@ -552,7 +552,7 @@ input[type="range"].horizontal {
   #pedal-box { position:relative; }
   .row-actions { margin-top:6px; display:flex; flex-direction:row!important;}
   .row-buttons, .controls-row { display:flex; flex-direction:row!important; gap:6px; flex-wrap:nowrap; }
-  .row-buttons, .controls-row button { flex:0 0 auto; white-space:nowrap; width:10px }
+  .row-buttons, .controls-row button { flex:0 0 auto; white-space:nowrap; /*width:10px*/ }
   .control { background:#222; padding:6px; margin:6px 0; border-radius:6px; z-index:200;}
   .control label { display:block; font-size:12px; margin:2px 0; }
   .ctrl-actions { /*display:flex;*/ gap:4px; flex-direction: column; }
@@ -564,7 +564,7 @@ input[type="range"].horizontal {
   input[type="color"] { width: 30px; border: 0px; margin:0px; cursor: pointer; padding: 0px; outline-offset: 0px; border-radius: 0px; background-color:transparent; }
   .pedal-info label { display: flex; flex-direction: column; align-items: flex-start; margin-bottom: 12px;}
   .pedal-info input { width: 94%; box-sizing: border-box; }
-
+  .ctrl-width, .ctrl-height { width:50px; }
 
   #pedal-published-options {
       list-style: none;  /* removes the bullets */
