--- a/style.css
+++ b/style.css
@@ -842,7 +842,7 @@ input[type="range"].horizontal {
 }
 @font-face {
   font-family: compacta;
-  src: url("fonts/compacta.ttf"); 
+  src: url("fonts/CompactaPlain.ttf"); 
 }
 @font-face {
   font-family: mesa;
